# twwh2-memreader

./: .gitignore  LICENSE.md  README.md  deploy.js  package-lock.json  package.json
script/_lib/mod/: memreader.lua
struct/: README.md  project.rcnet
struct/$basic/: LinkedList.d.ts  LinkedList.js  Vector.d.ts  Vector.js  WrapPtr.d.ts  WrapPtr.js  index.d.ts  index.js
struct/$character/: index.js
struct/$db/: $tables.txt  abilities.js  agent_ability_categories.js  index.d.ts  index.js
struct/$static/: uic_db.js
struct/$uic/: index.js
test/: read_1.js
twwh2-memreader/: CMakeLists.txt  CMakeSettings.json  config.h.in  lua_ptr.c  lua_ptr.h  memreader.c  memreader.h  module.c  module.h  stdafx.h  utils.c  utils.h
twwh2-memreader/lua-5.1/src/: luaconf.h
